customized recipes and other content after user feedback

--- a/a-bug.html
+++ b/a-bug.html
@@ -9,7 +9,8 @@
   <h1>Jitterbug!!!</h1>
   
   <center>
-    <iframe src="https://player.vimeo.com/video/18705870?autoplay=1&cc_load_policy=1" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/18705870?autoplay=1&cc_load_policy=1&loop=1" 
+    width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/18705870">Wham! - Wake me up, before you go-go</a> from <a href="https://vimeo.com/user2929777">Raquel Prates</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
   </center>
   <center>
