--- a/a-bug.html
+++ b/a-bug.html
@@ -9,7 +9,7 @@
   <h1>Jitterbug!!!</h1>
   
   <center>
-    <iframe src="https://player.vimeo.com/video/44454111" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/44454111?autoplay=1&cc_load_policy=1&loop=1" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/44454111">Wake Me Up Before You Go-Go</a> from <a href="https://vimeo.com/waver80">Waver 80</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
   </center>
   <center>
